add middleware and  exchange-rates api
