# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\ExchangeRateController;
 use App\Http\Controllers\PostController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -21,10 +22,18 @@ Route::post('/register', [AuthController::class, 'register'])->name('register');
 Route::post('/login', [AuthController::class, 'login'])->name('login');
 Route::middleware('auth:sanctum')->post('/logout', [AuthController::class, 'logout'])->name('logout');
 
-### USER ###
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
+
+
+Route::group(['middleware' => ['auth:sanctum']], function () {
+    ### POSTS ###
+    Route::apiResource('posts', PostController::class);
+
+    ### EXCHANGE RATE ###
+    Route::get('/exchange-rates', [ExchangeRateController::class, 'index'])->name('allow.exchange.rate');
+
+    ### USER ###
+    Route::get('/user', function (Request $request) {
+        return $request->user();
+    });
 });
 
-### POSTS ###
-Route::middleware('auth:sanctum')->apiResource('posts', PostController::class);
